# spacecraft_commander

./: Justfile  todo.md  todo.txt
game/: .gitignore  Character.gd  Character.tscn  Engine.gdextension  export_presets.cfg  fpscounter.gd  icon.svg.import  main.tscn  project.godot  tmp_bak.universe
game/materials/: dark_glass.tres  virtual_material.tres  window_glass.tres
game/vessel/buildings/: control00.tscn  light00.tscn
game/vessel/controls/: lever_2axis.tscn  lever_analog.tscn
game/vessel/generic/: wall_generic.tscn  wall_virtual.tscn
game/vessel/tiles/: wall_glass.tscn
game/vessel/walls/: wall1.tscn
rust/: .gitignore  Cargo.toml
rust/engine/: Cargo.toml
rust/engine/src/: lib.rs  netman.rs  ui.rs  universe.rs  util.rs
rust/engine/src/netman/: messages.rs  net.rs
rust/engine/src/ui/: player_manager.rs  resources.rs  systems.rs  uecs.rs
rust/engine/src/ui/systems/: building.rs
rust/engine/src/universe/: rotations.rs  tilemap.rs
rust/engine_ecs/: Cargo.toml
rust/engine_ecs/src/: component_traits.rs  ecs_cell.rs  internal.rs  lib.rs  query.rs  query_world.rs  system_parameter.rs  systems.rs
rust/engine_ecs/src/system_parameter/: changes.rs  commands.rs  query.rs
rust/engine_ecs_tests/: Cargo.toml
rust/engine_ecs_tests/src/: lib.rs
rust/engine_macro/: Cargo.toml
rust/engine_macro/src/: lib.rs
rust/engine_num/: Cargo.toml
rust/engine_num/src/: lib.rs
rust/engine_registry/: Cargo.toml
rust/engine_registry/src/: lib.rs
rust/engine_universe/: Cargo.toml
rust/engine_universe/src/: actions.rs  ecs.rs  lib.rs  mcs.rs  rotations.rs  tilemap.rs  type_registry.rs  ui_events.rs
rust/engine_universe/src/ecs/: bridge.rs  player.rs  vessel.rs
rust/engine_universe/src/mcs/: buildings.rs  events.rs  player.rs  vessel.rs
