[package]
name = "engine"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
indexmap = { version = "*", features = ["serde"] }

tokio = { version = "1.27.0", features = ["full"] }
serde = { version = "1.0.159", features = ["derive"] }
bincode = { version = "1.3.3" }
bitcode = { version = "0.4", features = ["serde"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
socket2 = "0.5.1"

x25519-dalek = "*"
aes-gcm = "*"
rand_core = {version = "0.6.4", features = ["getrandom"]}

thiserror = "*"

engine_num = {path = "../engine_num"}
smallvec = "1.11.1"
