[package]
name = "engine"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine_num = {path = "../engine_num"}
engine_universe = {path = "../engine_universe"}
engine_ecs = {path = "../engine_ecs"}
engine_registry = {path = "../engine_registry"}

godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
indexmap = { version = "*", features = ["serde"] }

tokio = { version = "1.27.0", features = ["full"] }
serde = { version = "1.0.159", features = ["derive"] }
bincode = { version = "1.3.3" }
bitcode = { version = "0.5.0", features = ["serde"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
socket2 = "0.5.1"

x25519-dalek = "*"
aes-gcm = "*"
rand_core = {version = "0.6.4", features = ["getrandom"]}

thiserror = "*"
smallvec = {version = "1.11.1", features = ["serde"]}
anyhow = "1.0.75"
derive_more = "0.99.17"
ron = "0.8.1"

