[package]
name = "engine_ecs"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine_macro = { path = "../engine_macro" }

slotmapd = { version = "1.0.10", features = ["serde"] }
smallvec = { version = "1.11.2", features = ["serde"] }
serde = {version = "1.0.192", features = ["derive"]}
crossbeam-queue = "0.3.8"
