[package]
name = "engine_universe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine_num = {path = "../engine_num"}

indexmap = { version = "*", features = ["serde"] }

serde = { version = "1.0.159", features = ["derive"] }
bincode = { version = "1.3.3" }
bitcode = { version = "0.5.0", features = ["serde"] }
tracing = "0.1.37"

thiserror = "*"
smallvec = {version = "1.11.1", features = ["serde"]}
anyhow = "1.0.75"
bevy_ecs = "0.12.0"
bevy_utils = "0.12.0"
derive_more = "0.99.17"

